# Squad-Admin-Configurator-Discord

./: Dockerfile  Dockerfile.dev  README.md  api.py  config.example.toml  global_checks.py  pyproject.toml  requirements.txt
cogs/: __init__.py  privileges.py
squad_admin_configurator_discord/: bot.py  checks.py  config.example.toml  filters.py  main.py
squad_admin_configurator_discord/cogs/: privileges.py
squad_admin_configurator_discord/templates/: privileged_set.md.j2
templates/: privileged_get.md.j2
